crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchors_both_ends.txt
Q = {
  .
  (a)
  .
}
==== diagnostics ====
error: anchor needs an enclosing node
 --> query.ptk:2:3
  |
2 |   .
  |   ^
  |
help: wrap in a named node: `(parent . (child))`

error: anchor needs an enclosing node
 --> query.ptk:4:3
  |
4 |   .
  |   ^
  |
help: wrap in a named node: `(parent . (child))`
==== symbols ====
